# C-plus-plus-20

./: .gitignore  CMakeLists.txt  README.md
include/: prime_calculator.hpp  thread_pool.hpp
prime_calculator_rs/: Cargo.toml  README.md
prime_calculator_rs/benches/: bench_primes.rs
prime_calculator_rs/src/: lib.rs  main.rs  prime_calculator.rs  thread_pool.rs  types.rs
prime_calculator_rs/tests/: integration_test.rs
src/: main.cpp  prime_calculator.cpp  thread_pool.cpp
